// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create a function 1`] = `
Object {
  "app.wx": Object {
    "resources": Array [
      Object {
        "attrs": Object {},
        "path": "app/my_function",
        "props": Object {
          "environmentVariables": Object {
            "ENV_VAR1": "true",
          },
          "sourceCodeFile": "assets/my_function/index.js",
          "sourceCodeLanguage": "javascript",
        },
        "type": "wingsdk.cloud.Function",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": Object {
    "tree": Object {
      "children": Object {
        "my_function": Object {
          "attributes": Object {
            "wing:resource:inbound": Array [],
            "wing:resource:outbound": Array [],
            "wing:resource:stateful": false,
          },
          "children": Object {
            "Code": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.25",
              },
              "id": "Code",
              "path": "app/my_function/Code",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.25",
          },
          "id": "my_function",
          "path": "app/my_function",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.25",
      },
      "id": "app",
      "path": "app",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`invoke function fails 1`] = `
Object {
  "app.wx": Object {
    "resources": Array [
      Object {
        "attrs": Object {},
        "path": "app/my_function",
        "props": Object {
          "environmentVariables": Object {},
          "sourceCodeFile": "assets/my_function/index.js",
          "sourceCodeLanguage": "javascript",
        },
        "type": "wingsdk.cloud.Function",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": Object {
    "tree": Object {
      "children": Object {
        "my_function": Object {
          "attributes": Object {
            "wing:resource:inbound": Array [],
            "wing:resource:outbound": Array [],
            "wing:resource:stateful": false,
          },
          "children": Object {
            "Code": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.25",
              },
              "id": "Code",
              "path": "app/my_function/Code",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.25",
          },
          "id": "my_function",
          "path": "app/my_function",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.25",
      },
      "id": "app",
      "path": "app",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`invoke function succeeds 1`] = `
Object {
  "app.wx": Object {
    "resources": Array [
      Object {
        "attrs": Object {},
        "path": "app/my_function",
        "props": Object {
          "environmentVariables": Object {},
          "sourceCodeFile": "assets/my_function/index.js",
          "sourceCodeLanguage": "javascript",
        },
        "type": "wingsdk.cloud.Function",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": Object {
    "tree": Object {
      "children": Object {
        "my_function": Object {
          "attributes": Object {
            "wing:resource:inbound": Array [],
            "wing:resource:outbound": Array [],
            "wing:resource:stateful": false,
          },
          "children": Object {
            "Code": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.25",
              },
              "id": "Code",
              "path": "app/my_function/Code",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.25",
          },
          "id": "my_function",
          "path": "app/my_function",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.25",
      },
      "id": "app",
      "path": "app",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`invoke function with environment variables 1`] = `
Object {
  "app.wx": Object {
    "resources": Array [
      Object {
        "attrs": Object {},
        "path": "app/my_function",
        "props": Object {
          "environmentVariables": Object {
            "PIG_LATIN": "true",
          },
          "sourceCodeFile": "assets/my_function/index.js",
          "sourceCodeLanguage": "javascript",
        },
        "type": "wingsdk.cloud.Function",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": Object {
    "tree": Object {
      "children": Object {
        "my_function": Object {
          "attributes": Object {
            "wing:resource:inbound": Array [],
            "wing:resource:outbound": Array [],
            "wing:resource:stateful": false,
          },
          "children": Object {
            "Code": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.25",
              },
              "id": "Code",
              "path": "app/my_function/Code",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.25",
          },
          "id": "my_function",
          "path": "app/my_function",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.25",
      },
      "id": "app",
      "path": "app",
    },
    "version": "tree-0.1",
  },
}
`;
